The bug is fixed why color was not appearing simple syntax error was there. But the site is not responsive yet.

--- a/SRC/CSS/LayoutDesign.css
+++ b/SRC/CSS/LayoutDesign.css
@@ -22,8 +22,9 @@
     width: 15%;
     height: 25%;
     background-color: var(--button-background-color);
-    border:20px solid var(--accent-background-color);
+    border: none;
     border-radius: 10px;
+    text-align: center;
 }
 
 #search-btn:hover{
