--- a/SRC/CSS/root-vars.css
+++ b/SRC/CSS/root-vars.css
@@ -1,4 +1,4 @@
-:root{
+
     :root {
         --body-background-color: linear-gradient(to right, #626298, #5252d5);
         --card-background-color: rgba(255, 255, 255, 0.92);
@@ -7,4 +7,3 @@
         --button-background-color: #7c83f7;
         --button-hover-background-color: #626298;
     }
-}
